--- a/LabAssessment2/LabAssessment2.vcxproj
+++ b/LabAssessment2/LabAssessment2.vcxproj
@@ -147,8 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Course.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Student.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Teacher.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LabAssessment2.cpp" />
