--- a/LabAssessment2/LabAssessment2.vcxproj.filters
+++ b/LabAssessment2/LabAssessment2.vcxproj.filters
@@ -38,5 +38,14 @@
     <ClCompile Include="LabAssessment2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Teacher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Course.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
